--- a/todo_service/requirements.txt
+++ b/todo_service/requirements.txt
@@ -3,6 +3,7 @@ appdirs==1.4.3
 astroid==2.4.2
 autopep8==1.5.4
 CacheControl==0.12.6
+cachetools==4.1.1
 certifi==2019.11.28
 chardet==3.0.4
 click==7.1.2
@@ -10,10 +11,16 @@ colorama==0.4.3
 contextlib2==0.6.0
 distlib==0.3.0
 distro==1.4.0
+filelock==3.0.12
 Flask==1.1.2
+Flask-Cors==3.0.9
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.4
+google-auth==1.20.1
+google-auth-oauthlib==0.4.1
+gspread==3.6.0
 html5lib==1.0.1
+httplib2==0.18.1
 idna==2.8
 ipaddr==2.2.0
 isort==5.5.2
@@ -26,10 +33,14 @@ MarkupSafe==1.1.1
 marshmallow==3.7.1
 mccabe==0.6.1
 msgpack==0.6.2
+oauth2client==4.1.3
+oauthlib==3.1.0
 packaging==20.3
 pep517==0.8.2
 progress==1.5
 psycopg2-binary==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pylint==2.6.0
 pyparsing==2.4.6
@@ -37,11 +48,14 @@ python-dateutil==2.8.1
 python-editor==1.0.4
 pytoml==0.1.21
 requests==2.22.0
+requests-oauthlib==1.3.0
 retrying==1.3.3
+rsa==4.6
 six==1.14.0
 SQLAlchemy==1.3.19
 toml==0.10.1
 urllib3==1.25.8
+virtualenv==20.0.31
 webencodings==0.5.1
 Werkzeug==1.0.1
 wrapt==1.12.1
